--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button onclick="statenIslandFunction()"><dt>Staten Island</dt></button>
         <dd id = 'Staten Island'></dd>
 
-        <button onclick="bonxFunction()"><dt>Bronx</dt></button>
+        <button onclick="bronxFunction()"><dt>Bronx</dt></button>
         <dd id = 'Bronx'></dd>
     </dl>
     <div>
@@ -35,10 +35,14 @@
     <input id="numOfComplaints" placeholder="0-5000">
 </div>
 
-<table class ='table'>
-<thead></thead>
-<tbody></tbody>
-  </table>
+<div id="printArray">
+</div>
+
+<!-- <li id= "descriptor">
+</li>
+
+<li id= "descriptor_solution">
+</li> -->
 
 </body>
 </html>
